--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,12 @@ textarea{
 .button-submit{
     margin-left: 30px;
 }
+
+.form{
+   margin-bottom: 10px;
+   height: 50px;
+}
+
+::placeholder{
+    font-weight: 600;
+}
